@@ -11,6 +11,7 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.context.ActiveProfiles;
 import ru.mts.config.AnimalFactoryTestConfig;
 import ru.mts.model.Animal;
+import ru.mts.model.AnimalType;
 import ru.mts.model.pet.Parrot;
 import ru.mts.model.predator.Shark;
 import ru.mts.model.predator.Wolf;
@@ -20,8 +21,7 @@ import javax.annotation.PostConstruct;
 import java.lang.reflect.Field;
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.Collections;
-import java.util.Set;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -38,7 +38,7 @@ public class AnimalsRepositoryTest {
 
     @PostConstruct
     public void init() throws NoSuchFieldException {
-        Field field = animalsRepository.getClass().getDeclaredField("animals");
+        Field field = animalsRepository.getClass().getDeclaredField("animalsMap");
         field.setAccessible(true);
         AnimalsRepositoryTest.field = field;
     }
@@ -54,26 +54,32 @@ public class AnimalsRepositoryTest {
     @Test
     @DisplayName("тест правильности работы метода AnimalsRepository.findLeapYearNames()")
     void testFindLeapYearNames() throws IllegalAccessException {
-        Animal[] animals = new Animal[]{
-                new Shark("кусь", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(25).minusDays(4)),
-                new Shark("морти", new BigDecimal(21000), "ленивый", Collections.emptyList(), LocalDate.now().minusYears(13).minusDays(4)),
-                new Shark("чипол", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(20).minusDays(4))
-        };
+        Map<String, List<Animal>> animals = new HashMap<>();
+        List<Animal> sharks = new ArrayList<>(List.of(
+                new Shark("кусь", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.of(1999, 4, 10)),
+                new Shark("морти", new BigDecimal(21000), "ленивый", Collections.emptyList(), LocalDate.of(2019, 2, 14)),
+                new Shark("чипол", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.of(2004, 11, 4))
+        ));
+        animals.put(AnimalType.SHARK.name(), sharks);
+
         field.set(animalsRepository, animals);
 
-        String[] leapYearNames = animalsRepository.findLeapYearNames();
-        String[] expected = new String[]{"чипол", "морти"};
-        assertEquals(expected[0], leapYearNames[0]);
+        Map<String, LocalDate> leapYearNames = animalsRepository.findLeapYearNames();
+        String[] expected = new String[]{"SHARK чипол"};
+        for (String s : leapYearNames.keySet()) {
+            assertEquals(expected[0], s);
+        }
+
     }
 
     @Test
     @DisplayName("тест работы метода AnimalsRepository.findLeapYearNames() с пустым массивом на вход")
     void testFindLeapYearNamesEmpty() throws IllegalAccessException {
-        Animal[] arr = new Animal[]{};
-        field.set(animalsRepository, arr);
+        Map<String, List<Animal>> animals = new HashMap<>();
+        field.set(animalsRepository, animals);
 
-        String[] result = animalsRepository.findLeapYearNames();
-        assertEquals(0, result.length);
+        Map<String, LocalDate> result = animalsRepository.findLeapYearNames();
+        assertEquals(0, result.keySet().size());
     }
 
     @Test
@@ -93,57 +99,73 @@ public class AnimalsRepositoryTest {
     @Test
     @DisplayName("тест работы метода AnimalsRepository.findDuplicate() с пустым массивом на вход")
     void testFindDuplicatesEmpty() throws IllegalAccessException {
-        Animal[] arr = new Animal[]{};
-        field.set(animalsRepository, arr);
+        Map<String, List<Animal>> animals = new HashMap<>();
+        field.set(animalsRepository, animals);
 
-        Set<Animal> result = animalsRepository.findDuplicate();
+        Map<String, Integer> result = animalsRepository.findDuplicate();
         assertEquals(0, result.size());
     }
 
     @Test
     @DisplayName("тест правильности работы метода AnimalsRepository.findDuplicate()")
     void testFindDuplicate() throws IllegalAccessException {
-        Animal[] duplicateAnimals = new Animal[]{
+        Map<String, List<Animal>> duplicateAnimals = new HashMap<>();
+        List<Animal> sharks = new ArrayList<>(List.of(
                 new Shark("кусь", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(25).minusDays(4)),
                 new Shark("кусь", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(25).minusDays(4)),
-                new Wolf("кусь", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(25).minusDays(4)),
                 new Shark("морти", new BigDecimal(21000), "ленивый", Collections.emptyList(), LocalDate.now().minusYears(13).minusDays(4)),
                 new Shark("чипол", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(20).minusDays(4))
-        };
+        ));
+        List<Animal> wolfs = new ArrayList<>(List.of(
+                new Wolf("кусь", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(25).minusDays(4))
+        ));
+        duplicateAnimals.put(AnimalType.WOLF.name(), wolfs);
+        duplicateAnimals.put(AnimalType.SHARK.name(), sharks);
+
         field.set(animalsRepository, duplicateAnimals);
 
-        Set<Animal> duplicate = animalsRepository.findDuplicate();
-        Animal[] expected = new Animal[]{
-                new Shark("кусь", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(25).minusDays(4))
-        };
-        Animal next = duplicate.iterator().next();
-        assertEquals(expected[0], next);
+        Map<String, Integer> duplicate = animalsRepository.findDuplicate();
+        String next = duplicate.keySet().iterator().next();
+        Integer i = duplicate.get(next);
+        assertEquals("Акула", next);
+        assertEquals(2, i);
     }
 
     @ParameterizedTest
-    @ValueSource(ints = {5, 7, 10})
+    @ValueSource(ints = {5, 7, 10, 100})
     @DisplayName("тест правильности работы метода AnimalsRepository.findOlderAnimal()")
     void testFindOlderAnimal(int n) throws IllegalAccessException {
-        Animal[] olderAnimals = new Animal[]{
-                new Parrot("Кеша", new BigDecimal(200), "говорящий", LocalDate.now().minusYears(19).minusDays(19)),
+        Map<String, List<Animal>> olderAnimals = new HashMap<>();
+        Animal oldestAnimal = new Shark("Большая акула", new BigDecimal(30000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(29).minusMonths(5).minusDays(22));
+        List<Animal> sharks = new ArrayList<>(List.of(
                 new Shark("Кусь", new BigDecimal(20000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(20).minusDays(4)),
-                new Parrot("Попугайчик", new BigDecimal(150), "говорящий", LocalDate.now().minusYears(12).minusMonths(8).minusDays(17)),
-                new Shark("Большая акула", new BigDecimal(30000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(29).minusMonths(5).minusDays(22)),
-                new Parrot("Цветик", new BigDecimal(180), "говорящий", LocalDate.now().minusYears(9).minusMonths(5).minusDays(12)),
+                oldestAnimal,
                 new Shark("Маленькая акула", new BigDecimal(15000), "кусается", Collections.emptyList(), LocalDate.now().minusYears(6).minusMonths(11).minusDays(27))
-        };
+        ));
+        List<Animal> parrots = new ArrayList<>(List.of(
+                new Parrot("Кеша", new BigDecimal(200), "говорящий", LocalDate.now().minusYears(19).minusDays(19)),
+                new Parrot("Попугайчик", new BigDecimal(150), "говорящий", LocalDate.now().minusYears(12).minusMonths(8).minusDays(17)),
+                new Parrot("Цветик", new BigDecimal(180), "говорящий", LocalDate.now().minusYears(9).minusMonths(5).minusDays(12))
+        ));
+        olderAnimals.put(AnimalType.PARROT.name(), parrots);
+        olderAnimals.put(AnimalType.SHARK.name(), sharks);
         field.set(animalsRepository, olderAnimals);
 
-        Animal[] olderAnimalsArray = animalsRepository.findOlderAnimal(n);
+        Map<Animal, Integer> olderAnimalsArray = animalsRepository.findOlderAnimal(n);
         switch (n) {
             case 5:
-                assertEquals(6, olderAnimalsArray.length);
+                assertEquals(6, olderAnimalsArray.keySet().size());
                 break;
             case 7:
-                assertEquals(5, olderAnimalsArray.length);
+                assertEquals(5, olderAnimalsArray.keySet().size());
                 break;
             case 10:
-                assertEquals(4, olderAnimalsArray.length);
+                assertEquals(4, olderAnimalsArray.keySet().size());
+                break;
+            case 100:
+                Animal next = olderAnimalsArray.keySet().iterator().next();
+                assertEquals(1, olderAnimalsArray.keySet().size());
+                assertEquals(oldestAnimal, next);
                 break;
             default:
                 throw new IllegalArgumentException("Unexpected value: " + n);
@@ -153,11 +175,11 @@ public class AnimalsRepositoryTest {
     @Test
     @DisplayName("тест работы метода AnimalsRepository.findOlderAnimal() с пустым массивом на вход")
     void testFindOlderAnimalEmpty() throws IllegalAccessException {
-        Animal[] arr = new Animal[]{};
-        field.set(animalsRepository, arr);
+        Map<String, List<Animal>> animals = new HashMap<>();
+        field.set(animalsRepository, animals);
 
-        Animal[] result = animalsRepository.findOlderAnimal(10);
-        assertEquals(0, result.length);
+        Map<Animal, Integer> result = animalsRepository.findOlderAnimal(10);
+        assertEquals(0, result.keySet().size());
     }
 
     @Test
@@ -171,7 +193,8 @@ public class AnimalsRepositoryTest {
     @DisplayName("тест работы метода AnimalsRepository.findOlderAnimal() с неправильным возрастом на вход")
     void testFindOlderAnimalWrongOld() throws IllegalAccessException {
         int n = -1;
-        field.set(animalsRepository, new Animal[]{});
+        Map<String, List<Animal>> animals = new HashMap<>();
+        field.set(animalsRepository, animals);
         assertThrows(IllegalArgumentException.class, () -> animalsRepository.findOlderAnimal(n));
     }
 
